# kuumcam

./: CMakeLists.txt  captureTest  note.md
include/: EncodingPipeline.h  kuumcamConfig.h
python/: FaceDetector.py  clientTest.py  config.py  gstreamer-pipelines.md  kuumcam.py  kuumcamV2.py  testGStreamerPython.py
python/FSM/: consumer-producer.py  keyboardListener.py  kuumcamMachine.py  main.py  scheduler.py  threadTest.py
python/FSM/config/: network.conf  ttp229-keypad.conf
python/endpoint/: main.py  platform.py  scheduler.py
python/endpoint/config/: network.conf  ttp229-keypad.conf
python/streaming-engine/: config.py  gstreamer-pipelines.md  kuumcamV2.py
python/testServer/: server.py
src/: kuumcam.cpp  sender.cpp
